Se actualiza modulo de contabilidad

--- a/conta.html
+++ b/conta.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modulo de contabilidad</title>
 </head>
+<script src="index.html"></script>
 <body>
-    
+    <H1>SISTEMA DE CONTABILIDAD</H1>
+    <H2>Modulo de contabilidad</H2>
 </body>
 </html>
