--- a/conta.html
+++ b/conta.html
@@ -10,5 +10,6 @@
     <H1>SISTEMA DE CONTABILIDAD</H1>
     <H2>Modulo de contabilidad</H2>
 </body>
-<p>Manual de sistema de ingles</p>
+<p>Manual de sistema</p>
+<P>CAPITULO 1</P>
 </html>
